# decoding

./: .gitignore  Dockerfile  README.md  preconstruct.html  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  search.js  setup.cfg
.github/workflows/: build_wheels.yml  docs.yml  python-package.yml
decoding/: __init__.py  basisfunctions.py  dataset.py  io.py  sources.py  test_dataset.py  test_io.py
decoding/_tests/: conftest.py  test_dataset.py  test_io.py  test_sources.py
preconstruct/: __init__.py  _tests.html  basisfunctions.html  dataset.html  dataset.py  sources.html  sources.py  stimuliformats.html  stimuliformats.py
preconstruct/_tests/: conftest.html  conftest.py  test_dataset.html  test_dataset.py  test_model.html  test_sources.html  test_sources.py  test_stimuliformats.html  test_stimuliformats.py
preconstruct/gammatone/: fftweight.py
