[metadata]
name = decoding
version = 0.1.0

[options]
packages = decoding
python_requires = >= 3.7, < 3.10
install_requires =
	parse >= 1.19.0
	scipy >= 1.7.0
	numpy >= 1.21.1
	pandas >= 1.3.1
	Gammatone @ git+https://github.com/christianbrodbeck/gammatone.git@fmax
	joblib >= 1.1.0
	appdirs >= 1.4.4
	aiohttp >= 3.8.1
	pandarallel >= 1.5.5
