[metadata]
name = preconstruct
version = attr: preconstruct.__version__

[options]
packages = preconstruct
python_requires = >= 3.7, < 3.10
install_requires =
        parse >= 1.19.0
        scipy >= 1.0.0
        numpy >= 1.21.1
        pandas >= 1.3.1
        joblib >= 1.1.0
        appdirs >= 1.4.4
        aiohttp >= 3.8.1
